Fix flash message position, navbar and footer color, footer location, namespacing for region businesses

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -91,7 +91,6 @@ margin-bottom: 15px;
   background-color:black;
   text-align: center;
 	background: black;
-	opacity: .7;
 	border: 0 !important;
 	padding-top: 10px;
 	position: fixed;
@@ -232,6 +231,7 @@ body {
 #wrapper {
 	min-height:100%;
 	position:relative;
+	margin-bottom: 100px;
 }
 
 #content {
@@ -239,12 +239,11 @@ body {
 }
 #footer {
 	background: black;
-	opacity: .7;
 	width:100%;
 	height:100px;
-	position:absolute;
 	bottom:0;
 	left:0;
+	position: fixed;
 }
 
 /* Login modal styling */
@@ -338,9 +337,12 @@ $muted: #777;
 }
 
 .alert {
-  margin-top: 60px;
   margin-bottom: 0px;
+	position: absolute;
   border-radius: 5px;
+	z-index: 999;
+	width: 100%;
+	text-align: center;
 }
 
 .region-data {
